--- a/Back-end/requirements.txt
+++ b/Back-end/requirements.txt
@@ -7,10 +7,11 @@ Flask-Cors==4.0.0
 Flask-JWT-Extended==4.5.2
 Flask-SQLAlchemy==3.0.5
 greenlet==3.2.3
-gunicorn==20.1.0
+gunicorn==23.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
+packaging==25.0
 PyJWT==2.10.1
 python-dotenv==1.0.0
 SQLAlchemy==2.0.41
