--- a/Front-end/.env
+++ b/Front-end/.env
@@ -1,1 +1,1 @@
-REACT_APP_API_URL=https://kalafo-telemedicine-backend.onrender.com
+REACT_APP_API_URL=https://kalafo-telemedicine-backend.onrender.com/api
