Fix Railway production deployment

--- a/Front-end/.env
+++ b/Front-end/.env
@@ -1,1 +1,1 @@
-REACT_APP_API_URL=https://kalafo-telemedicine-backend.onrender.com/api
+REACT_APP_API_URL=https://web-production-98494.up.railway.app
