--- a/Front-end/.env
+++ b/Front-end/.env
@@ -1,1 +1,2 @@
-REACT_APP_API_URL=https://web-production-98494.up.railway.app
+# In Front-end/.env
+REACT_APP_API_URL=https://web-production-98484.up.railway.app/api
