--- a/Front-end/.env
+++ b/Front-end/.env
@@ -1,2 +1,1 @@
-# In Front-end/.env
-REACT_APP_API_URL=https://web-production-98484.up.railway.app/api
+REACT_APP_API_URL=https://kalafo20-production.up.railway.app/api
